--- a/style.css
+++ b/style.css
@@ -39,10 +39,36 @@ input {
 
 .head h1, input {
     align-self: center;
-} 
+}
 
-.Tasks .todoList {
-    
+.head i {
+    cursor: pointer;
+}
+
+.Categories .items {
+    display: grid;  
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    align-self: center;
+}
+
+.items .item {
+    text-align: center;
+    border: 2px solid #ccc;
+    width: 100%;
+    height: 120px;
+    padding: 10px;
+    box-shadow: 1px 2px 2px #ccc;
+    cursor: pointer;
+    overflow-x: auto;
+}
+
+
+.Tasks {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .todoList li {
@@ -52,12 +78,17 @@ input {
     line-height: 50px;
     position: relative;
     background-color: #f2f2f2;
-    border-radius: 5px;
+    border-radius: 20px;
     margin-bottom: 20px;
     margin-top: 20px;
     padding: 0 15px;
     overflow: hidden;
     margin-left: 40px;
+    text-align: left;
+}
+
+.todoList li:hover {
+    background-color: #f1e0e0;
 }
 
 .todoList li span {
@@ -83,13 +114,22 @@ input {
     height: 60px;
     border: none;
     outline: none;
-    background: #8e49e8;
-    color: #fff;
+    background: linear-gradient(to bottom, #bc96ee 0%, #5e2ca0) 100%;
     font-size: 22px;
     cursor: pointer;
     border-radius: 30px; 
+    left: 50%;
+}
+
+.Tasks button i {
+    color: #fff;
 }
 
 .Tasks button:hover {
     background: #9571c4;
+}
+
+input[type="checkbox"] {
+    height: 20px;
+    width: 20px;
 }
