--- a/style.css
+++ b/style.css
@@ -7,11 +7,17 @@
     color: rgb(59, 54, 54);
 }
 
+h2 {
+    margin-left: 20px;
+}
+
 body {
     height: 90vh;
     width: 100%;
     background: linear-gradient(to bottom, #68eacc 0%, #497be8) 100%;
 }
+
+/*****/
 
 .overview{
     margin: 120px auto;
@@ -19,7 +25,7 @@ body {
     width: 100%;
     background-color: white;
     background: url('https://th.bing.com/th/id/R.87e95202c096d9d2fe018366876b2e59?rik=pwSQ4LC4yIIlyw&riu=http%3a%2f%2fwww.codeproject.com%2fKB%2fmobile%2f439871%2fBackgroundImage.png&ehk=f6ej92s5XdVREy%2bkVyAzAPqOOU%2b7LPH003y%2b0U2hJiw%3d&risl=&pid=ImgRaw&r=0');
-    border-radius: 10px;
+    border-radius: 25px;
     padding: 10px;
 }
 
@@ -37,13 +43,23 @@ input {
     flex-direction: column;
 }
 
+.head h1 {
+    display: inline-block;
+}
+
 .head h1, input {
     align-self: center;
 }
 
 .head i {
     cursor: pointer;
+    margin-top: 5px;
+    margin-left: 20px;
+    width: 30px;
+    height: 100%;
 }
+
+/******/
 
 .Categories .items {
     display: grid;  
@@ -56,14 +72,18 @@ input {
 
 .items .item {
     text-align: center;
-    border: 2px solid #ccc;
+    text-decoration: underline;
+    border: 2px solid rgb(15, 13, 13);
     width: 100%;
     height: 120px;
     padding: 10px;
     box-shadow: 1px 2px 2px #ccc;
     cursor: pointer;
-    overflow-x: auto;
+    border-radius: 20px;
 }
+
+
+/*******/
 
 
 .Tasks {
@@ -84,11 +104,10 @@ input {
     padding: 0 15px;
     overflow: hidden;
     margin-left: 40px;
-    text-align: left;
 }
 
 .todoList li:hover {
-    background-color: #f1e0e0;
+    background-color: #d6e3f3;
 }
 
 .todoList li span {
@@ -107,18 +126,53 @@ input {
     right: 0px;
 }
 
+input[type=checkbox] + label {
+    cursor: pointer;
+}
+  
+input[type=checkbox] {
+    display: none;
+}
+  
+input[type=checkbox] + label:before {
+    content: "\2714";
+    border: 0.5px solid #000;
+    border-radius: 5px;
+    color: transparent;
+    transition: .2s;
+    margin-right: 5px;
+}
+  
+input[type=checkbox] + label:active:before {
+    transform: scale(0);
+}
+  
+input[type=checkbox]:checked + label:before {
+    background-color: MediumSeaGreen;
+    border-color: MediumSeaGreen;
+    color: #fff;
+}
 
+input[type=checkbox]:checked:disabled + label:before {
+    transform: scale(1);
+    background-color: MediumSeaGreen;
+    border-color: MediumSeaGreen;
+}
+
+/******/
 
 .Tasks button {
     width: 60px;
     height: 60px;
     border: none;
     outline: none;
-    background: linear-gradient(to bottom, #bc96ee 0%, #5e2ca0) 100%;
+    background: linear-gradient(to bottom, #5b8eeb 0%, #1a2ab8) 100%;
     font-size: 22px;
     cursor: pointer;
     border-radius: 30px; 
-    left: 50%;
+    left: 75%;
+    position: relative;
+    transition: 0.3s;
 }
 
 .Tasks button i {
@@ -126,10 +180,7 @@ input {
 }
 
 .Tasks button:hover {
-    background: #9571c4;
+    background: #2995a8;
 }
 
-input[type="checkbox"] {
-    height: 20px;
-    width: 20px;
-}
+
