--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h2 {
 }
 
 body {
-    height: 90vh;
+    height: 100%;
     width: 100%;
     background: linear-gradient(to bottom, #68eacc 0%, #497be8) 100%;
 }
