--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@
 }
 
 h2 {
-    margin-left: 20px;
+    margin-left: 15px;
 }
 
 body {
-    height: 100%;
+    height: 1100px;
     width: 100%;
     background: linear-gradient(to bottom, #68eacc 0%, #497be8) 100%;
 }
@@ -29,13 +29,14 @@ body {
     padding: 10px;
 }
 
-input {
+input[type="text"] {
     width: 300px;
     height: 50px;
     border: 2px solid #ccc;
     font-size: 18px;
     border-radius: 20px; 
     margin: 20px 20px;
+    padding: 0 25px;
 }
 
 .head {
@@ -45,6 +46,7 @@ input {
 
 .head h1 {
     display: inline-block;
+    font-size: 25px;
 }
 
 .head h1, input {
@@ -93,7 +95,7 @@ input {
 
 .todoList li {
     list-style: none;
-    width: 300px;
+    width: 350px;
     height: 50px;
     line-height: 50px;
     position: relative;
@@ -103,7 +105,7 @@ input {
     margin-top: 20px;
     padding: 0 15px;
     overflow: hidden;
-    margin-left: 40px;
+    margin-left: 12px;
 }
 
 .todoList li:hover {
@@ -170,7 +172,7 @@ input[type=checkbox]:checked:disabled + label:before {
     font-size: 22px;
     cursor: pointer;
     border-radius: 30px; 
-    left: 75%;
+    left: 80%;
     position: relative;
     transition: 0.3s;
 }
