--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Noto Sans';
+    font-family: "Poppins", sans-serif;
     font-size: 20px;
     color: rgb(59, 54, 54);
 }
@@ -94,72 +94,79 @@ input[type="text"] {
 }
 
 .todoList li {
-    list-style: none;
-    width: 350px;
-    height: 50px;
-    line-height: 50px;
     position: relative;
-    background-color: #f2f2f2;
+    list-style: none;
+    margin-bottom: 8px;
+    background: #f2f2f2;
     border-radius: 20px;
     margin-bottom: 20px;
     margin-top: 20px;
-    padding: 0 15px;
+    padding: 10px 15px;
+    cursor: default;
     overflow: hidden;
-    margin-left: 12px;
-}
-
-.todoList li:hover {
-    background-color: #d6e3f3;
-}
-
-.todoList li span {
-    position: absolute;
-    right: -45px;
-    color: #fff;
-    background: #729dc5;
-    width: 45px;
-    text-align: center;
-    border-radius: 0 3px 3px 0;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.todoList li:hover span {
-    right: 0px;
-}
-
-input[type=checkbox] + label {
-    cursor: pointer;
-}
+    word-wrap: break-word;
+  }
   
-input[type=checkbox] {
-    display: none;
-}
+  .todoList li:hover {
+      background-color: #d6e3f3;
+  }
   
-input[type=checkbox] + label:before {
-    content: "\2714";
-    border: 0.5px solid #000;
-    border-radius: 5px;
-    color: transparent;
-    transition: .2s;
-    margin-right: 5px;
-}
+  .todoList li span {
+      position: absolute;
+      right: -45px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #fff;
+      background: #729dc5;
+      width: 45px;
+      text-align: center;
+      border-radius: 0 3px 3px 0;
+      padding: 15px 15px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+  }
   
-input[type=checkbox] + label:active:before {
-    transform: scale(0);
-}
+  .todoList li:hover span {
+      right: 0px;
+  }
+  input[type=checkbox] {
+      display: none;
+  }
   
-input[type=checkbox]:checked + label:before {
-    background-color: MediumSeaGreen;
-    border-color: MediumSeaGreen;
-    color: #fff;
-}
-
-input[type=checkbox]:checked:disabled + label:before {
-    transform: scale(1);
-    background-color: MediumSeaGreen;
-    border-color: MediumSeaGreen;
-}
+  input[type=checkbox]+label:before {
+      content: "\2714";
+      border: 0.1em solid #000;
+      border-radius: 0.5em;
+      display: inline-block;
+      width: 1em;
+      height: 1em;
+      padding-left: 5px;
+      padding-bottom: 5px;
+      margin-right: 10px;
+      color: transparent;
+      transition: .2s;
+  }
+  
+  input[type=checkbox]+label:active:before {
+      transform: scale(0);
+  }
+  
+  input[type=checkbox]:checked+label:before {
+      background-color: MediumSeaGreen;
+      border-color: MediumSeaGreen;
+      color: #fff;
+  }
+  
+  input[type=checkbox]:disabled+label:before {
+      transform: scale(1);
+      border-color: #aaa;
+  }
+  
+  input[type=checkbox]:checked:disabled+label:before {
+      transform: scale(1);
+      background-color: #bfb;
+      border-color: #bfb;
+  }
 
 /******/
 
