--- a/style.css
+++ b/style.css
@@ -192,4 +192,74 @@ input[type="text"] {
     background: #2995a8;
 }
 
+/******/
+
+
+.popup .content {
+    position: absolute;
+    left:50%;
+    top: 50%;
+    width: 240px;
+    height: 280px;
+    transform: translate(-50%,-50%) scale(0);
+    background-color: white;
+    z-index: 2;
+    text-align: center;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow:  1px 1px 1px #1e1e1e, 
+                -1px -1px 1px #1e1e1e;
+    z-index: 1;
+   }
+   
+.popup .close-btn {
+    position: absolute;
+}
+   
+.popup .close-btn:hover {
+     cursor: pointer;
+}
+   
+.popup.active .content {
+   transition: all 300ms ease-in-out;
+   transform: translate(-50%,-50%) scale(1);
+}
+   
+.content h1 {
+    text-align: center;
+    font-size: 32px;
+    font-weight: 600;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+   
+.input-field .validate {
+   padding: 10px;
+   font-size: 16px;
+   border-radius: 10px;
+   border: none;
+   margin-bottom: 15px;
+   color: #bfc0c0;
+   outline: none;
+}
+   
+.second-button {
+   font-size: 15px;
+   font-weight: 500;
+   padding: 20px 30px;
+   border-radius: 30px;
+   border: none;
+   transition: .35s ease !important;
+   outline: none;
+}
+   
+.second-button:active{
+   background: linear-gradient(145deg,#8bd2ee, #a0cbee);
+   border: none;
+   outline: none;
+}
+   
+   
+   
+   
 
