--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h2 {
 }
 
 body {
-    height: 100%;
+    height: 1091px;
     width: 100%;
     background: linear-gradient(to bottom, #68eacc 0%, #497be8) 100%;
 }
@@ -280,7 +280,7 @@ input[type=checkbox]:checked:disabled+label:before {
     .overview {
         width: 150%;
         max-width: 60%;
-        height: 100%;
+        height: 70%;
     }
 
     input[type="text"] {
